--- a/source/_patterns/00-atoms/06-buttons/01-button-groups.mustache
+++ b/source/_patterns/00-atoms/06-buttons/01-button-groups.mustache
@@ -31,12 +31,14 @@
 	<a href="#">Lajittelu 3</a>
 </div>
 
-<div class="select-style">
-	<select id="" class="btn-group">
-		<option selected="selected" value="0">Kaikille</option>
-		<option value="1">Vain kutsutuille</option>
-	</select>
-</div>
+<span class="select-style">
+	<span class="border-fix">
+		<select id="" class="btn-group">
+			<option selected="selected" value="0">Kaikille</option>
+			<option value="1">Vain kutsutuille</option>
+		</select>
+	</span>
+</span>
 
 
 
