--- a/source/css/scss/objects/_sections.scss
+++ b/source/css/scss/objects/_sections.scss
@@ -48,7 +48,7 @@
 		box-shadow: 0 1px 2px 0px rgba(0,0,0, 0.125);
 		@include border-radius(1px, 1px, 1px, 1px);
 	}
-
+	.items-container{ width: 100%; }
 	.block-item, .items-container{ display: inline-block; }
 	.block-item .count-container{ min-width: 70px; }
 	.block-item{
@@ -56,6 +56,13 @@
 		margin-right: 5px;
 		&:nth-child(2){
 			margin: -10px 20px 0;
+		}
+		&:nth-child(4){
+			width: 100%;
+
+			@media #{$tablet}{
+				width: 30%;
+			}
 		}
 	}
 }
