--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -194,7 +194,7 @@
 				max-width: 100%;
 				max-height: 100%;
 				// Fake fill
-				background-color: $gray-light;
+				//background-color: $gray-light;
 				border: 3px solid darken($gray-light, 20%);
 
 			}
