--- a/patterns/02-organisms-03-sections-05-event-lift/02-organisms-03-sections-05-event-lift.mustache
+++ b/patterns/02-organisms-03-sections-05-event-lift/02-organisms-03-sections-05-event-lift.mustache
@@ -49,7 +49,7 @@
 				&lt;/div&gt;
 			&lt;/div&gt;
 			&lt;div class=&quot;right-block float-right&quot;&gt;
-				&lt;img src=&quot;{{ img.square.src }}&quot; alt=&quot;{{ img.square.alt }}&quot; /&gt;
+				&lt;img src=&quot;{{ img.square-picture.src }}&quot; alt=&quot;{{ img.square-picture.alt }}&quot; /&gt;
 			&lt;/div&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;form-element&quot;&gt;
