--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -49,6 +49,10 @@
 		<span class="sg-swatch color--a"></span>
 		<span class="sg-label">#F16521</span>
 	</li>
+	<li>
+		<span class="sg-swatch color--a"></span>
+		<span class="sg-label">#12c4ae</span>
+	</li>
 </ul>
 
 <h3>Kansalaisaloite</h3>
