--- a/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
+++ b/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
@@ -1,69 +1,68 @@
 <div class="page hankesivu-edit-mode" id="page">
   {{> organisms-header }}
-  <div role="main">
-    <div class="hanke-details">
-      <h1>Muokkaa hanketta</h1>
-      <div class="block backgroud">
-        <img src="../../images/fpo_16x9.png" alt="Taustakuva" />
-        <input class="btn btn-otk" type="submit" value="Vaihda taustakuva" />
+  <div role="main" class="edit-hanke-form">
+    <h1>Muokkaa hanketta</h1>
+    <div class="block backgroud">
+      <img src="../../images/fpo_16x9.png" alt="Taustakuva" />
+      <input class="btn btn-otk" type="submit" value="Vaihda taustakuva" />
+    </div>
+    <div class="block logo">
+      <img src="../../images/fpo_avatar.png" alt="Logo" />
+      <input class="btn btn-otk" type="submit" value="Vaihda logo" />
+    </div>
+    <div id="hanke-title" class="form-element text-el">
+      <label for="text-field">Otsikko tai nimi*</label>
+      <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän otsikko tai nimi..." maxlength="130"></textarea>
+    </div>
+    <div id="hanke-intro" class="form-element text-el">
+      <div class="helper-container">
+        <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Esittely*</span>
+        <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
-      <div class="block logo">
-        <img src="../../images/fpo_avatar.png" alt="Logo" />
-        <input class="btn btn-otk" type="submit" value="Vaihda logo" />
+      <textarea class="js-dynamic" placeholder="Kirjoita tähän esittely..." maxlength="400"></textarea>
+    </div>
+    <div id="hanke-description" class="form-element text-el">
+      <div class="helper-container">
+        <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Kuvaus ja tavoitteet*</span>
+        <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
-      <div id="hanke-title" class="form-element text-el">
-        <label for="text-field">Otsikko tai nimi*</label>
-        <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän otsikko tai nimi..." maxlength="130"></textarea>
+      <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän kuvaus ja tavoitteet..." maxlength="2000"></textarea>
+    </div>
+    <div id="hanke-responsibility" class="form-element text-el">
+      <label for="text-field">Vastuujärjestö tai -henkilö*</label>
+      <textarea class="ta-small js-dynamic"  placeholder="Kirjoita tähän vastuujärjestö tai -henkilö..." maxlength="130"></textarea>
+    </div>
+    <div id="hanke-publicity">
+      <div class="helper-container">
+        <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen näkyvyys*</span>
+        <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
-      <div id="hanke-intro" class="form-element text-el">
-        <div class="helper-container">
-          <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Esittely*</span>
-          <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
-        </div>
-        <textarea class="js-dynamic" placeholder="Kirjoita tähän esittely..." maxlength="400"></textarea>
-      </div>
-      <div id="hanke-description" class="form-element text-el">
-        <div class="helper-container">
-          <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Kuvaus ja tavoitteet*</span>
-          <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
-        </div>
-        <textarea class="ta-small js-dynamic" placeholder="Kirjoita tähän kuvaus ja tavoitteet..." maxlength="2000"></textarea>
-      </div>
-      <div id="hanke-responsibility" class="form-element text-el">
-        <label for="text-field">Vastuujärjestö tai -henkilö*</label>
-        <textarea class="ta-small js-dynamic"  placeholder="Kirjoita tähän vastuujärjestö tai -henkilö..." maxlength="130"></textarea>
-      </div>
-      <div id="hanke-publicity">
-        <div class="helper-container">
-          <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen näkyvyys*</span>
-          <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
-        </div>
-        <span class="select-style">
-          <span class="border-fix">
-            <select id="" class="btn-group">
-              <option selected="selected" value="0">Julkinen/näkyy kaikille</option>
-              <option value="1">Vain kutsutuille</option>
-            </select>
-          </span>
+      <span class="select-style">
+        <span class="border-fix">
+          <select id="" class="btn-group">
+            <option selected="selected" value="0">Julkinen/näkyy kaikille</option>
+            <option value="1">Vain kutsutuille</option>
+          </select>
         </span>
+      </span>
+    </div>
+    <div id="hanke-publish">
+      <div class="helper-container">
+        <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen julkaisun tila*</span>
+        <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
-      <div id="hanke-publish">
-        <div class="helper-container">
-          <span class="icon-help" title="Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää." placement="top">Hankkeen julkaisun tila*</span>
-          <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
-        </div>
-        <span class="select-style">
-          <span class="border-fix">
-            <select id="" class="btn-group">
-              <option selected="selected" value="0">Suunnitteilla</option>
-              <option value="1">Julkaistu</option>
-              <option value="2">Peruttu</option>
-            </select>
-          </span>
+      <span class="select-style">
+        <span class="border-fix">
+          <select id="" class="btn-group">
+            <option selected="selected" value="0">Suunnitteilla</option>
+            <option value="1">Julkaistu</option>
+            <option value="2">Peruttu</option>
+          </select>
         </span>
-      </div>
-      <!-- This can't be done with current implementation. Requires new feature implementation -->
-      <!--<div id="hanke-status">
+      </span>
+    </div>
+    <!-- This can't be done with current implementation. Requires new feature implementation -->
+    <!--<div id="hanke-status">
         <div class="helper-container">
           <span class="icon-help" title="Lorem ipsum" placement="top">Hankkeen vaihe*</span>
           <p class="helper-text small is-vishidden">Lorem ipsum</p>
@@ -78,130 +77,129 @@
           </span>
         </span>
       </div>-->
-      <div id="hanke-date">
+    <div id="hanke-date">
+      <div class="helper-container">
+        <span class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</span>
+        <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
+      </div>
+      <div class="event-date-container">
+        <div class="form-element date-element left-block">
+          <label for="date-picker">Hankkeen alkupvm.</label>
+          <input type="text" id="date-picker" class="datepicker" value="1.6.2014" />
+        </div>
+        <div class="form-element date-element right-block">
+          <label for="date-picker">Hankkeen loppupvm.</label>
+          <input type="text" id="date-picker" class="datepicker" value="14.5.2015" />
+        </div>
         <div class="helper-container">
-          <span class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</span>
+          <span class="icon-help" title="Example tip text." placement="top">Hankkeen yhteenvedon julkaisu*</span>
           <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
         </div>
         <div class="event-date-container">
           <div class="form-element date-element left-block">
-            <label for="date-picker">Hankkeen alkupvm.</label>
-            <input type="text" id="date-picker" class="datepicker" value="1.6.2014" />
-          </div>
-          <div class="form-element date-element right-block">
-            <label for="date-picker">Hankkeen loppupvm.</label>
+            <label for="date-picker">Yhteenvedon julkaisupvm.</label>
             <input type="text" id="date-picker" class="datepicker" value="14.5.2015" />
           </div>
-          <div class="helper-container">
-            <span class="icon-help" title="Example tip text." placement="top">Hankkeen yhteenvedon julkaisu*</span>
-            <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
-          </div>
-          <div class="event-date-container">
-            <div class="form-element date-element left-block">
-              <label for="date-picker">Yhteenvedon julkaisupvm.</label>
-              <input type="text" id="date-picker" class="datepicker" value="14.5.2015" />
-            </div>
-          </div>
-        </div>
-      </div>   
-      <div id="hanke-attachments">
-        <div id="hanke-add-attachment">
-          <form action="" class="attachment-form">
-            <div class="form-element attachment-container">
-              <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
-              <input type="file" id="upload-file" />
-            </div>
-          </form>
-        </div>
-        <!-- Hanke attachment list -->
-        <div id="hanke-attachment-list" class="fadeout">
-          <div class="attachment-form inline-element">
-            <div class="form-element attachment-edit">
-              <label class="edit-file-button">muokkaa</label>
-              <div class="mime-container">
-                <i class="fa fa-file-o"></i>
-              </div>
-              <a class="file-title">Otsikko</a>
-              <p>tiedostonimi...jpg</p>
-            </div>
-          </div>
-          <div class="attachment-form inline-element">
-            <div class="form-element attachment-edit">
-              <label class="edit-file-button">muokkaa</label>
-              <div class="mime-container">
-                <i class="fa fa-file-o"></i>
-              </div>
-              <a class="file-title">Otsikko</a>
-              <p>tiedostonimi...jpg</p>
-            </div>
-          </div>
-          <div class="attachment-form inline-element">
-            <div class="form-element attachment-edit">
-              <label class="edit-file-button">muokkaa</label>
-              <div class="mime-container">
-                <i class="fa fa-file-o"></i>
-              </div>
-              <a class="file-title">Otsikko</a>
-              <p>tiedostonimi...jpg</p>
-            </div>
-          </div>
-          <p class="read-more">
-            <a href="">Näytä liitetiedostot</a>
-          </p>
         </div>
       </div>
-      <div id="hanke-links">
-        <h3>Linkit</h3>
-        <div class="hanke-link-list">
-          <div class="hanke-link-item">
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
-            </div>
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
-            </div>
+    </div>
+    <div id="hanke-attachments">
+      <div id="hanke-add-attachment">
+        <form action="" class="attachment-form">
+          <div class="form-element attachment-container">
+            <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
+            <input type="file" id="upload-file" />
           </div>
-          <div class="hanke-link-item cf">
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+        </form>
+      </div>
+      <!-- Hanke attachment list -->
+      <div id="hanke-attachment-list" class="fadeout">
+        <div class="attachment-form inline-element">
+          <div class="form-element attachment-edit">
+            <label class="edit-file-button">muokkaa</label>
+            <div class="mime-container">
+              <i class="fa fa-file-o"></i>
             </div>
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
-            </div>
-          </div>
-          <div class="hanke-link-item cf">
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
-            </div>
-            <div class="form-element text-el">
-              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
-            </div>
+            <a class="file-title">Otsikko</a>
+            <p>tiedostonimi...jpg</p>
           </div>
         </div>
-        <input class="btn btn-otk" type="submit" value="Lisää linkki" />
+        <div class="attachment-form inline-element">
+          <div class="form-element attachment-edit">
+            <label class="edit-file-button">muokkaa</label>
+            <div class="mime-container">
+              <i class="fa fa-file-o"></i>
+            </div>
+            <a class="file-title">Otsikko</a>
+            <p>tiedostonimi...jpg</p>
+          </div>
+        </div>
+        <div class="attachment-form inline-element">
+          <div class="form-element attachment-edit">
+            <label class="edit-file-button">muokkaa</label>
+            <div class="mime-container">
+              <i class="fa fa-file-o"></i>
+            </div>
+            <a class="file-title">Otsikko</a>
+            <p>tiedostonimi...jpg</p>
+          </div>
+        </div>
+        <p class="read-more">
+          <a href="">Näytä liitetiedostot</a>
+        </p>
       </div>
-      <div id="hanke-locations">
-        <h3>Paikkakunnat</h3>
-        <ul id="tbLocations" class="location-list"></ul>
+    </div>
+    <div id="hanke-links">
+      <h3>Linkit</h3>
+      <div class="hanke-link-list">
+        <div class="hanke-link-item">
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
+          </div>
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
+          </div>
+        </div>
+        <div class="hanke-link-item cf">
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+          </div>
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+          </div>
+        </div>
+        <div class="hanke-link-item cf">
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+          </div>
+          <div class="form-element text-el">
+            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+          </div>
+        </div>
       </div>
-      <div id="hanke-keywords">
-        <h3>Asiasanat</h3>
-        <ul id="tbKeywords" class="tagit-list"></ul>
-      </div>
-      <div id="hanke-admins">
-        <h3>Vastuuhenkilöt</h3>
-        <ul id="tbAdmins" class="person-list"></ul>
-      </div>
-      <div id="hanke-supervisors">
-        <h3>Ohjaajat</h3>
-        <ul id="tbSupervisors" class="person-list"></ul>
-      </div>
-      <div id="hanke-save">
-        <input type="checkbox">
-          Olen tutustunut <a href="#">palvelun sääntöihin</a> ja vakuutan annettujen tietojen olevan todenmukaisia*
-        </input>
-        <input type="submit" class="btn btn-otk" value="Tallenna muutokset" />
-      </div>
+      <input class="btn btn-otk" type="submit" value="Lisää linkki" />
+    </div>
+    <div id="hanke-locations">
+      <h3>Paikkakunnat</h3>
+      <ul id="tbLocations" class="location-list"></ul>
+    </div>
+    <div id="hanke-keywords">
+      <h3>Asiasanat</h3>
+      <ul id="tbKeywords" class="tagit-list"></ul>
+    </div>
+    <div id="hanke-admins">
+      <h3>Vastuuhenkilöt</h3>
+      <ul id="tbAdmins" class="person-list"></ul>
+    </div>
+    <div id="hanke-supervisors">
+      <h3>Ohjaajat</h3>
+      <ul id="tbSupervisors" class="person-list"></ul>
+    </div>
+    <div id="hanke-save">
+      <input type="checkbox">
+        Olen tutustunut <a href="#">palvelun sääntöihin</a> ja vakuutan annettujen tietojen olevan todenmukaisia*
+      </input>
+      <input type="submit" class="btn btn-otk" value="Tallenna muutokset" />
     </div>
   </div><!--End role=main-->
   {{> organisms-footer }}
