--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -2,59 +2,7 @@
   {{> organisms-header }}
   <div role="main">
     <section class="main">
-      <section class="content-carousel">
-        <div id="myCarousel" class="carousel slide has-text-items">
-          <div class="carousel-inner">
-            <div class="item item-1 active">
-              <a href="#">
-                <img alt="Kesä on täällä" src="https://beta.otakantaa.fi/download/noname/%7B4A0DC50E-FF77-4A06-BC1A-880B83B2CE0E%7D/11155?exactwidth=1200&exactheight=250" title="Kesä on täällä" />
-              </a>
-              <div class="carousel-caption">
-                <h4>
-                  <a href="#">Otsikko</a>
-                </h4>
-                <p class="carousel-caption-content">Sisällön teksti</p>
-              </div>
-            </div>
-            <div class="item item-2 item-text">
-              <a target="_BLANK"> </a>
-              <div class="carousel-caption-text">
-                <h4>Pelkkää tekstiä</h4>
-                <p class="carousel-caption-content">Tässä on pelkkä otsikko ja tekstiä, ei lainkaan kuvaa ja linkkiä.</p>
-              </div>
-            </div>
-            <div class="item item-3 ">
-              <a href="#">
-                <img alt="Talvi on täällä" src="https://beta.otakantaa.fi/download/noname/%7BF93227F1-79BA-4AD7-94AE-128CB23CAABF%7D/11154?exactwidth=1200&exactheight=250" title="Talvi on täällä" />
-              </a>
-              <div class="carousel-caption">
-                <h4>
-                  <a href="#">Otsikko</a>
-                </h4>
-                <p class="carousel-caption-content">Sisällön teksti</p>
-              </div>
-            </div>
-            <div class="item item-4 item-text">
-              <div class="carousel-caption-text">
-                <a href="">
-                  <h4>Pelkkää tekstiä linkin kanssa</h4>
-                  <p class="carousel-caption-content">Tässä on pelkkä otsikko ja tekstiä linkkiin paketoituna, ei lainkaan kuvaa.</p>
-                </a>
-              </div>
-              </a>
-            </div>
-          </div>
-          <!-- Carousel nav -->
-          <a data-slide="prev" href="#myCarousel" class="carousel-control left"></a>
-          <a data-slide="next" href="#myCarousel" class="carousel-control right"></a>
-          <ol class="carousel-indicators">
-            <li class="active" data-slide-to="0" data-target="#myCarousel"></li>
-            <li class="" data-slide-to="1" data-target="#myCarousel"></li>
-            <li class="" data-slide-to="2" data-target="#myCarousel"></li>
-            <li class="" data-slide-to="3" data-target="#myCarousel"></li>
-          </ol>
-        </div>
-      </section>
+      {{> molecules-carousel }}
       <section class="l-two-col">
         <section class="l-main">
           <div>
