layout fixes to hankepage and front page

--- a/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
+++ b/patterns/03-templates-00-homepage/03-templates-00-homepage.mustache
@@ -2,59 +2,7 @@
   {{&gt; organisms-header }}
   &lt;div role=&quot;main&quot;&gt;
     &lt;section class=&quot;main&quot;&gt;
-      &lt;section class=&quot;content-carousel&quot;&gt;
-        &lt;div id=&quot;myCarousel&quot; class=&quot;carousel slide has-text-items&quot;&gt;
-          &lt;div class=&quot;carousel-inner&quot;&gt;
-            &lt;div class=&quot;item item-1 active&quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;
-                &lt;img alt=&quot;Kes&Atilde;&curren; on t&Atilde;&curren;&Atilde;&curren;ll&Atilde;&curren;&quot; src=&quot;https://beta.otakantaa.fi/download/noname/%7B4A0DC50E-FF77-4A06-BC1A-880B83B2CE0E%7D/11155?exactwidth=1200&amp;exactheight=250&quot; title=&quot;Kes&Atilde;&curren; on t&Atilde;&curren;&Atilde;&curren;ll&Atilde;&curren;&quot; /&gt;
-              &lt;/a&gt;
-              &lt;div class=&quot;carousel-caption&quot;&gt;
-                &lt;h4&gt;
-                  &lt;a href=&quot;#&quot;&gt;Otsikko&lt;/a&gt;
-                &lt;/h4&gt;
-                &lt;p class=&quot;carousel-caption-content&quot;&gt;Sis&Atilde;&curren;ll&Atilde;&para;n teksti&lt;/p&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;item item-2 item-text&quot;&gt;
-              &lt;a target=&quot;_BLANK&quot;&gt; &lt;/a&gt;
-              &lt;div class=&quot;carousel-caption-text&quot;&gt;
-                &lt;h4&gt;Pelkk&Atilde;&curren;&Atilde;&curren; teksti&Atilde;&curren;&lt;/h4&gt;
-                &lt;p class=&quot;carousel-caption-content&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; on pelkk&Atilde;&curren; otsikko ja teksti&Atilde;&curren;, ei lainkaan kuvaa ja linkki&Atilde;&curren;.&lt;/p&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;item item-3 &quot;&gt;
-              &lt;a href=&quot;#&quot;&gt;
-                &lt;img alt=&quot;Talvi on t&Atilde;&curren;&Atilde;&curren;ll&Atilde;&curren;&quot; src=&quot;https://beta.otakantaa.fi/download/noname/%7BF93227F1-79BA-4AD7-94AE-128CB23CAABF%7D/11154?exactwidth=1200&amp;exactheight=250&quot; title=&quot;Talvi on t&Atilde;&curren;&Atilde;&curren;ll&Atilde;&curren;&quot; /&gt;
-              &lt;/a&gt;
-              &lt;div class=&quot;carousel-caption&quot;&gt;
-                &lt;h4&gt;
-                  &lt;a href=&quot;#&quot;&gt;Otsikko&lt;/a&gt;
-                &lt;/h4&gt;
-                &lt;p class=&quot;carousel-caption-content&quot;&gt;Sis&Atilde;&curren;ll&Atilde;&para;n teksti&lt;/p&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;item item-4 item-text&quot;&gt;
-              &lt;div class=&quot;carousel-caption-text&quot;&gt;
-                &lt;a href=&quot;&quot;&gt;
-                  &lt;h4&gt;Pelkk&Atilde;&curren;&Atilde;&curren; teksti&Atilde;&curren; linkin kanssa&lt;/h4&gt;
-                  &lt;p class=&quot;carousel-caption-content&quot;&gt;T&Atilde;&curren;ss&Atilde;&curren; on pelkk&Atilde;&curren; otsikko ja teksti&Atilde;&curren; linkkiin paketoituna, ei lainkaan kuvaa.&lt;/p&gt;
-                &lt;/a&gt;
-              &lt;/div&gt;
-              &lt;/a&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-          &lt;!-- Carousel nav --&gt;
-          &lt;a data-slide=&quot;prev&quot; href=&quot;#myCarousel&quot; class=&quot;carousel-control left&quot;&gt;&lt;/a&gt;
-          &lt;a data-slide=&quot;next&quot; href=&quot;#myCarousel&quot; class=&quot;carousel-control right&quot;&gt;&lt;/a&gt;
-          &lt;ol class=&quot;carousel-indicators&quot;&gt;
-            &lt;li class=&quot;active&quot; data-slide-to=&quot;0&quot; data-target=&quot;#myCarousel&quot;&gt;&lt;/li&gt;
-            &lt;li class=&quot;&quot; data-slide-to=&quot;1&quot; data-target=&quot;#myCarousel&quot;&gt;&lt;/li&gt;
-            &lt;li class=&quot;&quot; data-slide-to=&quot;2&quot; data-target=&quot;#myCarousel&quot;&gt;&lt;/li&gt;
-            &lt;li class=&quot;&quot; data-slide-to=&quot;3&quot; data-target=&quot;#myCarousel&quot;&gt;&lt;/li&gt;
-          &lt;/ol&gt;
-        &lt;/div&gt;
-      &lt;/section&gt;
+      {{&gt; molecules-carousel }}
       &lt;section class=&quot;l-two-col&quot;&gt;
         &lt;section class=&quot;l-main&quot;&gt;
           &lt;div&gt;
