--- a/source/_patterns/04-pages/05-hankelist-page.mustache
+++ b/source/_patterns/04-pages/05-hankelist-page.mustache
@@ -1,4 +1,4 @@
-<div class="page hankesivu-read-mode" id="page">
+<div class="page hankelist-page" id="page">
   {{> organisms-header }}
   <div role="main">
     <span class="float-right">
