--- a/source/_patterns/04-pages/06-content-landingpage.mustache
+++ b/source/_patterns/04-pages/06-content-landingpage.mustache
@@ -1,4 +1,4 @@
-<div class="page" id="page">
+<div class="page content-landingpage" id="page">
   {{> organisms-header }}
   <div role="main">
     <h1>
@@ -40,6 +40,7 @@
           </div>
         </div>
       </div>
+      
       <div class="content-item large  float-left">
         <div class="lift-header gradient-cyan">
           Demokratia
@@ -72,6 +73,7 @@
           </div>
         </div>
       </div>
+      
       <div class="content-item large  float-left">
         <div class="lift-header gradient-cyan">
           Demokratiasanasto
