landing page styles and some content-item styles added

--- a/source/_patterns/04-pages/06-content-landingpage.mustache
+++ b/source/_patterns/04-pages/06-content-landingpage.mustache
@@ -8,85 +8,91 @@
       <p>{{description}}</p>
     </div>
     <div class="cf">
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Poliittinen osallistuminen
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Poliittinen osallistuminen
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
-          </div>
-        </div>
-      </div>
-      <div class="content-item large  float-right">
-        <div class="lift-header gradient-cyan">
-          Demokratian ongelmat ja haasteet
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
-          </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
-      </div>
-      
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Demokratia
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+        <div class="content-item medium  float-right">
+          <div class="lift-header gradient-cyan">
+            Demokratian ongelmat ja haasteet
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
-          </div>
-        </div>
-      </div>
-      <div class="content-item large  float-right">
-        <div class="lift-header gradient-cyan">
-          Edustuksellinen ja suora demokratia
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
-          </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
       </div>
       
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Demokratiasanasto
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Demokratia
+          </div>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
+          </div>
         </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+        <div class="content-item medium  float-right">
+          <div class="lift-header gradient-cyan">
+            Edustuksellinen ja suora demokratia
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+        </div>
+      </div>
+
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Demokratiasanasto
+          </div>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
       </div>
