--- a/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
+++ b/source/_patterns/04-pages/03-hankesivu-edit-mode.mustache
@@ -79,7 +79,7 @@
       </div>-->
     <div id="hanke-date">
       <div class="helper-container">
-        <span class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</span>
+        <h3 class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</h3>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
       <div class="event-date-container">
@@ -103,97 +103,101 @@
         </div>
       </div>
     </div>
-    <div id="hanke-attachments">
-      <div id="hanke-add-attachment">
-        <form action="" class="attachment-form">
-          <div class="form-element attachment-container">
-            <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
-            <input type="file" id="upload-file" />
-          </div>
-        </form>
-      </div>
-      <!-- Hanke attachment list -->
-      <div id="hanke-attachment-list" class="fadeout">
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+    <!-- Optional field those will be fadeout -->
+    <div class="fadeout">
+      <div id="hanke-attachments">
+        <h3>Liitteet</h3>
+        <div id="hanke-add-attachment">
+          <form action="" class="attachment-form">
+            <div class="form-element attachment-container">
+              <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
+              <input type="file" id="upload-file" />
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
-          </div>
+          </form>
         </div>
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+        <!-- Hanke attachment list -->
+        <div id="hanke-attachment-list">
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
           </div>
-        </div>
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
           </div>
-        </div>
-        <p class="read-more">
-          <a href="">Näytä liitetiedostot</a>
-        </p>
-      </div>
-    </div>
-    <div id="hanke-links">
-      <h3>Linkit</h3>
-      <div class="hanke-link-list">
-        <div class="hanke-link-item">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
-          </div>
-        </div>
-        <div class="hanke-link-item cf">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
-          </div>
-        </div>
-        <div class="hanke-link-item cf">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
+            </div>
           </div>
         </div>
       </div>
-      <input class="btn btn-otk" type="submit" value="Lisää linkki" />
-    </div>
-    <div id="hanke-locations">
-      <h3>Paikkakunnat</h3>
-      <ul id="tbLocations" class="location-list"></ul>
-    </div>
-    <div id="hanke-keywords">
-      <h3>Asiasanat</h3>
-      <ul id="tbKeywords" class="tagit-list"></ul>
-    </div>
-    <div id="hanke-admins">
-      <h3>Vastuuhenkilöt</h3>
-      <ul id="tbAdmins" class="person-list"></ul>
-    </div>
-    <div id="hanke-supervisors">
-      <h3>Ohjaajat</h3>
-      <ul id="tbSupervisors" class="person-list"></ul>
+      <div id="hanke-links">
+        <h3>Linkit</h3>
+        <div class="hanke-link-list">
+          <div class="hanke-link-item">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
+            </div>
+          </div>
+          <div class="hanke-link-item cf">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+            </div>
+          </div>
+          <div class="hanke-link-item cf">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+            </div>
+          </div>
+        </div>
+        <input class="btn btn-otk" type="submit" value="Lisää linkki" />
+      </div>
+      <div id="hanke-locations">
+        <h3>Paikkakunnat</h3>
+        <ul id="tbLocations" class="location-list"></ul>
+      </div>
+      <div id="hanke-keywords">
+        <h3>Asiasanat</h3>
+        <ul id="tbKeywords" class="tagit-list"></ul>
+      </div>
+      <div id="hanke-admins">
+        <h3>Vastuuhenkilöt</h3>
+        <ul id="tbAdmins" class="person-list"></ul>
+      </div>
+      <div id="hanke-supervisors">
+        <h3>Ohjaajat</h3>
+        <ul id="tbSupervisors" class="person-list"></ul>
+      </div>
+      <p class="read-more">
+        <a href="#">Näytä valinnaiset lisätiedot</a>
+      </p>
     </div>
     <div id="hanke-save">
       <input type="checkbox">
